--- a/.github/workflows/variables.yml
+++ b/.github/workflows/variables.yml
@@ -8,5 +8,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Echo ACCESS_ID
+    - name: Echo ${{ vars.ACCESS_ID }}
       run: echo ${{ vars.ACCESS_ID }}
